Bug 1030124 - If the nsDisplayTransform frame isn't actually transformed (and not a reference frame), then apply the coordinate space change offset when we compute the transform for the preserve-3d parent. r=roc